crates/test-files/fixtures/compile_errors/call_create2_with_wrong_type.fe
use std::context::Context

contract Bar {}

contract Foo {
    pub fn foo(ctx: Context) {
        Bar.create2(ctx, true, 1)
        Bar.create2(ctx, 1)  # agroce #447
        Bar.create2(ctx)
    }
}
